Add change main page

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -39,7 +39,7 @@
     "New product":"Новый товар",
     "Popular product":"Популярный товар",
     "Sale":"Распродажа",
-    "Price for":"Цена за",
+    "Price for thing":"Цена за штуку",
     "Recommended product":"Рекомендуемый товар",
     "liter":"литр",
     "bag":"мешок",
@@ -166,7 +166,34 @@
     ],
     "You have successfully added the product to your compare.":"Вы успешно добавили товар в сравнение.",
     "The item has already been added to your compare list.":"Этот товар уже добавлен в ваш список сравнения.",
-    "You have no products in the comparison list.":"У вас нет товаров в списке сравнения."
+    "You have no products in the comparison list.":"У вас нет товаров в списке сравнения.",
+    "Placing an order":"Оформления заказа",
+    "Your contact information":"Ваши контактные данные",
+    "Notes to the order":"Примечания к заказу",
+    "Order Summary":"Краткое содержание заказа",
+    "product(s)":"товар(ов)",
+    "Deliver":"Доставка",
+    "Carrier":"Перевозчик",
+    "Payment":"Оплата",
+    "Payment method":"Способ оплаты",
+    "City":"Город",
+    "Warehouse":"Отделения",
+    "Sliders":"Слайдеры",
+    "Add slider":"Добавить слайдер",
+    "Edit slider":"Редактировать слайдер",
+    "Link":"Ссылка",
+    "This checkbox allows the banner to be active on the site regardless of the selected display date.":"Данный чекбокс позволяет баннеру быть активным на сайте независимо от выбранной даты показа.",
+    "Start date of the banner display":"Дата начала показа баннера",
+    "End date of the banner display":"Дата конца показа баннера",
+    "Permanent banner":"Постоянный баннер",
+    "Place banner in the right corner up":"Разместить баннер правом углу вверх",
+    "Place banner in the bottom right corner":"Разместить баннер правом углу внизу",
+    "New products":"<span>Новые</span> товары",
+    "Recommended products":"<span>Рекомендуемые</span> товары",
+    "Sale products":"<span>Распродажа</span> товаров",
+    "Pages":"Страницы",
+    "Add page":"Добавить страницу",
+    "Edit page":"Редактировать страницу"
     
    
 
