--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -214,7 +214,7 @@
     "Popular product":"Популярний товар",
     "Recommended product":"Рекомендований товар",
     "Sale":"Розпродаж",
-    "Price for":"Ціна за",
+    "Price for thing":"Ціна за штуку",
     "liter":"літр",
     "bag": "мішок",
     "tones": "тони",
@@ -336,8 +336,34 @@
     ],
     "You have successfully added the product to your compare.": "Ви успішно додали товар у порівняння.",
     "The item has already been added to your compare list.": "Цей товар уже додано до вашого списку порівняння.",
-    "You have no products in the comparison list.":"У вас немає товарів в списку порівняння."
-
+    "You have no products in the comparison list.":"У вас немає товарів в списку порівняння.",
+    "Placing an order":"Оформлення замовлення",
+    "Your contact information":"Ваші контактні дані",
+    "Notes to the order":"Примітки до замовлення",
+    "Order Summary":"Короткий зміст замовлення",
+    "product(s)":"товар(ів)",
+    "Deliver":"Доставка",
+    "Carrier":"Перевізник",
+    "Payment":"Оплата",
+    "Payment method":"Спосіб оплати",
+    "City":"Місто",
+    "Warehouse":"Відділення",
+    "Sliders":"Слайдери",
+    "Add slider":"Додати слайдер",
+    "Edit slider":"Редагувати слайдер",
+    "Link":"Посилання",
+    "This checkbox allows the banner to be active on the site regardless of the selected display date.":"Даний чекбокс дозволяє банеру бути активним на сайті незалежно від вибраної дати показу.",
+    "Start date of the banner display":"Дата початку показу баннера",
+    "End date of the banner display":"Дата кінця показу баннера",
+    "Permanent banner":"Постійний банер",
+    "Place banner in the right corner up":"Розмістити банер правому куті вгору",
+    "Place banner in the bottom right corner":"Розмістити банер правому куті внизу",
+    "New products":"<span>Нові</span> товари",
+    "Recommended products":"<span>Рекомендовані</span> товари",
+    "Sale products":"<span>Розпродаж</span> товарів",
+    "Pages":"Сторінки",
+    "Add page":"Додати сторінку",
+    "Edit page":"Редагувати сторінку"
 
 
 
