Add change filter attr and brand

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -215,7 +215,10 @@
     "Sent":"Отправлено",
     "Cancel order":"Отменено",
     "Setting":"Настройки",
-    "Review":"Обзор"
+    "Review":"Обзор",
+    "Analog":"Аналоги",
+    "Culture":"Культура",
+    "Active ingredient":"Действующее вещество"
     
    
 
