--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -384,7 +384,10 @@
     "Sent":"Відправлено",
     "Cancel order":"Скасовано",
     "Setting":"Налаштування",
-    "Review":"Огляд"
+    "Review":"Огляд",
+    "Analog":"Аналоги",
+    "Culture":"Культура",
+    "Active ingredient":"Діюча речовина"
 
 
 
