--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -402,6 +402,14 @@
     "Product pages":"Сторінки для товару",
     "Stock price":"Акційна ціна (грн)",
     "discount_price_title":"Акційна ціна",
+    "Add your review":"Додайте ваш відгук",
+    "Feedback":"Відгук",
+    "Edit feedback":"Редагувати відгук №:number",
+    "Feedbacks":"Відгуки",
+    "Grade":"Оцінка",
+    "Response":"Відповідь",
+    "There are no reviews for this product at this time":"На даний момент поки що немає відгуків для цього товару",
+    "Thank you for your feedback. Your review will be published within this hour.":"Дякуємо вам за ваш відгук. Ваш відгук буде опубліковано протягом цієї години.",
     "Welcome to the admin panel of the Green Master website":"Ласкаво просимо на адмін панель сайті Зеленого майстра"
 
 
