Add oneclick and change

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -238,6 +238,7 @@
     "Feedbacks":"Отзывы",
     "Edit feedback":"Редактировать отзыв №:number",
     "Response":"Ответ",
+    "Enter your phone number and we will call you back":"Введите свой номер телефона и вам перезвонят",
     "Welcome to the admin panel of the Green Master website":"Добро пожаловать в админ панель сайта Зеленого мастера",
     "Grade":"Оценка",
     "There are no reviews for this product at this time":"На данный момент пока нету отзывов для данного товара",
