--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -410,7 +410,8 @@
     "Response":"Відповідь",
     "There are no reviews for this product at this time":"На даний момент поки що немає відгуків для цього товару",
     "Thank you for your feedback. Your review will be published within this hour.":"Дякуємо вам за ваш відгук. Ваш відгук буде опубліковано протягом цієї години.",
-    "Welcome to the admin panel of the Green Master website":"Ласкаво просимо на адмін панель сайті Зеленого майстра"
+    "Welcome to the admin panel of the Green Master website":"Ласкаво просимо на адмін панель сайті Зеленого майстра",
+    "Enter your phone number and we will call you back":"Введите свой номер телефона, и мы перезвоним вам."
 
 
 
